@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19870: BaseCookie now parses 'secure' and 'httponly' flags.
+  Backport of issue #16611.
+
 
 What's New in Python 2.7.8?
 ===========================
